--- a/src/sass/layouts/_app.scss
+++ b/src/sass/layouts/_app.scss
@@ -1,6 +1,8 @@
 .app {
   min-height: 100vh;
-  background-image: linear-gradient(45deg, #adcccf, #6ac7cf61);
+  // background-image: linear-gradient(45deg, #adcccf, #6ac7cf61);
+  background-image: url('../images/hero.jpg');
+  background-size: cover;
 
   display: grid;
   grid-template-columns: 1fr repeat(10, minmax(min-content, 14rem)) 1fr;
