--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -17,6 +17,7 @@
     text-decoration: none;
     display: inline-block;
     padding: 1rem;
+    margin: 0 2rem;
     color: $color-black;
     transition: all 0.2s ease;
   }
@@ -26,12 +27,14 @@
   }
 
   &__icon {
-    width: 6rem;
-    height: 6rem;
-    fill: #fff;
+    width: 4rem;
+    height: 4rem;
+    fill: $color-black-dark;
   }
 }
 
 .copyright {
+  font-size: 2rem;
+  font-weight: 600;
   text-align: center;
 }
